[package]
name = "steam-idler"
description = "A simple application that allows you to seemingly run an application on the steam platform."
version = "0.1.0"
authors = ["kvdlxne"]

# If the edition field is not present in Cargo.toml, then the 2015 edition is
# assumed for backwards compatibility.
# See: https://doc.rust-lang.org/cargo/reference/manifest.html#the-edition-field
edition = "2021"

[dependencies]
steamworks = "0.10.0"